Beautified code, fotn sizes and made changes for code validator

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
 </head>
 <body>
-<!---------------------------------------------------------------------------------Navigation Bar + Drop Down Menu-->
+<!--Navigation Bar + Drop Down Menu-->
 <header>
 <nav class="navbar navbar-expand-xxl navbar-light nav-color">  
   <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
   </div>
 </nav>
 </header>
-<!---------------------------------------------------------------------------------Welcome with pic-->
+<!--Welcome with pic-->
 <section id="hero-section">
 <div class="row">
 <div class="col-md-12">
@@ -61,7 +61,7 @@
 
 
 </section>
-<!---------------------------------------------------------------------------------Why join us-->
+<!--Why join us-->
 <section class="offer-you">
     <h1 class="text-center">WHAT WE OFFER YOU</h1>
     <p class="text-center">
@@ -71,7 +71,7 @@
     </p>
 </section>
 
-<!---------------------------------------------------------------------------------Our Team-->
+<!--Our Team-->
 <section class="our-team">
     <div class="container">
         <div class="title">
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card text-center">
-                    <img src="assets/images/ptw.jpg" class="card img-top">
+                    <img src="assets/images/ptw.jpg" class="card img-top" alt="Personal trainer">
                     <div class="card-body">
                         <h5 class="card-title">Emily James <i class="fas fa-user"></i></h5>
                         <p class="card-text"> "Hey there! I run the Manchester GYM CITY, I've been in the business for 10 years now and counting! You can always find me on the gym floor leading classes and helping our members achieve their fitness goals. See you there!'"</p>
@@ -90,7 +90,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card text-center">
-                    <img src="assets/images/pt.jpg" class="card img-top">
+                    <img src="assets/images/pt.jpg" class="card img-top" alt="Personal trainer">
                     <div class="card-body">
                         <h5 class="card-title">Mark Hughes <i class="fas fa-user"></i></h5>
                         <p class="card-text"> "Hey! I'm Mark, manager and pt at our London GYM CITY, I specialise in cardio workouts and as an ex professional 800m runner, I know all there is about HIIT training and getting your running time down!"</p>
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card text-center">
-                    <img src="assets/images/pt2.jpg" class="card img-top">
+                    <img src="assets/images/pt2.jpg" class="card img-top" alt="Personal trainer">
                     <div class="card-body">
                         <h5 class="card-title">Alberto Manuel <i class="fas fa-user"></i></h5>
                         <p class="card-text"> "Hola! I help to lead the Newcastle Gym City, We have an amazing environment here where everyone feels comfortable to workout, after years of learning and training I specify in packing on the muscle so if you need any tips and tricks come find me in Newcastle!"</p>
@@ -111,13 +111,13 @@
 
 
 </section>
-<!---------------------------------------------------------------------------------Memberships-->
+<!--Memberships-->
 <section id="membership">
     <div class="container">
         <h5 class="section-title h1">OUR MEMBERSHIPS</h5>
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                <div class="image-flip" >
                     <div class="mainflip">
                         <div class="frontside">
                             <div class="card">
@@ -135,8 +135,10 @@
                                         <li>Use up to 2 of our facilities</li>
                                         <li>2 free PT sessions a month</li>
                                         <li>Access to any of our classes</li>
-                                        <a href="sign-up.html"><button type="button" class="btn btn-info">£25</button></a>
-                                    </ul>
+                                        </ul>
+                                        <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
+                                       £25
+                                       </button>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +146,7 @@
                 </div>  
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                <div class="image-flip">
                     <div class="mainflip">
                         <div class="frontside">
                             <div class="card">
@@ -162,9 +164,10 @@
                                         <li>Use any of our facilities</li>
                                         <li>5 free PT sessions a month</li>
                                         <li>Access to any of our classes</li>
-                                        <a href="sign-up.html"><button type="button" class="btn btn-info">£35</button></a>
-                                    </ul>
-
+                                        </ul>
+                                        <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
+                                       £35
+                                       </button>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +175,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                <div class="image-flip">
                     <div class="mainflip">
                         <div class="frontside">
                             <div class="card">
@@ -190,8 +193,11 @@
                                         <li>Use one of our facilities</li>
                                         <li>1 free PT sessions a month</li>
                                         <li>Access to any of our classes</li>
-                                        <a href="sign-up.html"><button type="button" class="btn btn-info">£20</button></a>
-                                    </ul>
+                                        </ul>
+                                       <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
+                                       £20
+                                       </button>
+
                                 </div>
                             </div>
                         </div>
@@ -204,7 +210,7 @@
     </div>
 </section>
 
-<!--------------------------------------Mobile Membership Cards-->
+<!--Mobile Membership Cards-->
 <section id="mobile-member">
 <div class="container">
 <div class="boxed">
@@ -215,7 +221,9 @@
         <li>5 free PT sessions a month</li>
         <li>Access to any of our classes</li>
     </ul>
-    <a href="sign-up.html"><button type="button" class="btn btn-info">£35</button></a>
+    <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
+                                       £35
+                                       </button>
 
 </div>
 <div class="boxed">
@@ -226,7 +234,9 @@
         <li>2 free PT sessions a month</li>
         <li>Access to any of our classes</li>
     </ul>
-    <a href="sign-up.html"><button type="button" class="btn btn-info">£25</button></a>
+    <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
+                                       £25
+                                       </button>
 
 </div>
 <div class="boxed">
@@ -237,16 +247,20 @@
         <li>1 free PT sessions a month</li>
         <li>Access to any of our classes</li>
     </ul>
-    <a href="sign-up.html"><button type="button" class="btn btn-info">£20</button></a>
+    <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
+                                       £20
+                                       </button>
 
 </div>
 </div>
 
    
 </section>
-<!-- Team -->
-<!---------------------------------------------------------------------------------Reviews-->
+<!--Reviews-->
 <section id="reviews">
+    <div id="review-title">
+    <h1>Member Reviews</h1>
+    </div>
     <div class="container mt-5">
     <div class="card">
         <div class="row no-gutters">
@@ -296,10 +310,8 @@
     </div>
 </div>
 </section>
-<section>
 
-</section>
-<!---------------------------------------------------------------------------------Footer + Socials-->
+<!--Footer + Socials-->
 <footer>
 <ul class="social-networks">
         <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
@@ -308,6 +320,6 @@
         <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
 </ul>
 </footer>
-<!---------------------------------------------------------------------------------End-->
+<!--End-->
 </body>
 </html>
