--- a/sign-up.html
+++ b/sign-up.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 <body>
-<!---------------------------------------------------------------------------------Navigation Bar + Drop Down Menu-->
+<!--Navigation Bar + Drop Down Menu-->
 <header>
 <nav class="navbar navbar-expand-xxl navbar-light nav-color">  
   <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
   </div>
 </nav>
 </header>
-<!---------------------------------------------------------------------------------Form-->
+<!--Form-->
 <section id="signup-form">
     <div class="row">
         <div class="col-md-12">
@@ -69,7 +69,7 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlSelect1">Example select</label>
-                            <select class="form-control" id="exampleFormControlSelect1" required>
+                            <select class="form-control" id="exampleFormControlSelect1" >
                             <option>Select Membership</option>
                             <option>Premium</option>
                             <option>Standard</option>
@@ -92,23 +92,23 @@
                 <form>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">First Name</label>
-                            <input type="text" class="form-control" id="fname" placeholder="First Name" required>
+                            <input type="text" class="form-control" id="fname-m" placeholder="First Name" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Second Name</label>
-                            <input type="text" class="form-control" id="sname" placeholder="Second Name" required>
+                            <input type="text" class="form-control" id="sname-m" placeholder="Second Name" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Password</label>
-                            <input type="password" class="form-control" id="pword" placeholder="Password" required>
+                            <input type="password" class="form-control" id="pword-m" placeholder="Password" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Email address</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
+                            <input type="email" class="form-control" id="exampleFormControlInput1-m" placeholder="name@example.com" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlSelect1">Example select</label>
-                            <select class="form-control" id="exampleFormControlSelect1" required>
+                            <select class="form-control" id="exampleFormControlSelect1-m" >
                             <option>Select Membership</option>
                             <option>Premium</option>
                             <option>Standard</option>
@@ -121,19 +121,19 @@
                 </div>
             </div>
         </section>
-<!---------------------------------------------------------------------------------Other-->
+<!--Other-->
 <section id="enquiries">
-    <h1>Any other enquiries please contact us at: <a href = "mailto: gymcity@outlook.com">gymcity@outlook.com</a></h1>
+    <h1>Any other enquiries please contact us at: <a href = "mailto:gymcity@outlook.com">gymcity@outlook.com</a></h1>
 </section>
-<!---------------------------------------------------------------------------------Footer + Socials-->
+<!--Footer + Socials-->
 <footer>
 <ul class="social-networks">
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
         <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
         <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
 </ul>
 </footer>
-<!---------------------------------------------------------------------------------End-->
+<!---End-->
 </body>
 </html>
