--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 <body>
-<!---------------------------------------------------------------------------------Navigation Bar + Drop Down Menu-->
+<!--Navigation Bar + Drop Down Menu-->
 <header>
 <nav class="navbar navbar-expand-xxl navbar-light nav-color">  
   <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,33 +43,34 @@
   </div>
 </nav>
 </header>
-<!---------------------------------------------------------------------------------Locations-->
+<!--Gym Pictures-->
 <section id="gallery">
+<h1 id="review-title">Our Facilities</h1>
 <div class="row no-gutters">
   <div class="column">
-    <img src="assets/images/modern1.jpg">
-    <img src="assets/images/Student.jpg">
-    <img src="assets/images/Standard.jpg">
+    <img alt="Gym picture" src="assets/images/modern1.jpg">
+    <img alt="Gym picture" src="assets/images/Student.jpg">
+    <img alt="Gym picture" src="assets/images/Standard.jpg">
   </div>
   <div class="column">
-    <img src="assets/images/Premium.jpg">
-    <img src="assets/images/newcastlegym.jpg">
-    <img src="assets/images/modern2.jpg">
+    <img alt="Gym picture" src="assets/images/Premium.jpg">
+    <img alt="Gym picture" src="assets/images/newcastlegym.jpg">
+    <img alt="Gym picture" src="assets/images/modern2.jpg">
   </div>
   <div class="column">
-    <img src="assets/images/manchestergym.jpg">
-    <img src="assets/images/londongym.jpg">
-    <img src="assets/images/gympics1.jpg">
+    <img alt="Gym picture" src="assets/images/manchestergym.jpg">
+    <img alt="Gym picture" src="assets/images/londongym.jpg">
+    <img alt="Gym picture" src="assets/images/gympics1.jpg">
   </div>
   <div class="column">
-    <img src="assets/images/gympics2.jpg">
-    <img src="assets/images/gympics3.jpg">
-    <img src="assets/images/gympics4.jpg">
+    <img alt="Gym picture" src="assets/images/gympics2.jpg">
+    <img alt="Gym picture" src="assets/images/gympics3.jpg">
+    <img alt="Gym picture" src="assets/images/gympics4.jpg">
   </div>
 </div>
 </section>
 
-<!---------------------------------------------------------------------------------Footer + Socials-->
+<!--Footer + Socials-->
 <footer>
     <ul class="social-networks">
         <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
@@ -78,6 +79,6 @@
         <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
 </ul>
 </footer>
-<!---------------------------------------------------------------------------------End-->
+<!--End-->
 </body>
 </html>
