--- a/locations.html
+++ b/locations.html
@@ -14,7 +14,7 @@
     <title>Document</title>
 </head>
 <body>
-<!---------------------------------------------------------------------------------Navigation Bar + Drop Down Menu-->
+<!--Navigation Bar + Drop Down Menu-->
 <header>
 <nav class="navbar navbar-expand-xxl navbar-light nav-color">  
   <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
   </div>
 </nav>
 </header>
-<!---------------------------------------------------------------------------------Locations-->
+<!--Locations-->
 <section id="loc-section">
     <div class="row no-gutters">
         <div class="col-md-4">
@@ -67,7 +67,7 @@
         </div>
     </div>
 </section>
-<!---------------------------------------------------------------------------------Location Maps-->
+<!--Location Maps-->
 <section id="maps">
 <div class="container">
 <div class="row">
@@ -88,7 +88,7 @@
         </ul>
     </div>
     <div class="col-md map-pad">
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div></div>
     </div>
     <img src="assets/images/londongym.jpg" class="gympics" alt="">
 
@@ -110,7 +110,7 @@
     </div>
         
     <div class="col-md map-pad">
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div></div>
 </div>
 <img src="assets/images/newcastlegym.jpg" class="gympics" alt="">
     <div class="col-md text-pad"> 
@@ -130,15 +130,15 @@
         </ul>
         </div>
         <div class="col-md map-pad">
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div></div>
         </div>
         <img src="assets/images/manchestergym.jpg" class="gympics" alt="">
     </div>
     </div>
 </section>
-<!---------------------------------------------------------------------------------Mobile-->
+<!--Mobile-->
 
-<!---------------------------------------------------------------------------------Description-->
+<!--Description-->
 <section>
 <div class="ourgyms">
     <h1>Our Gyms</h1>
@@ -147,10 +147,12 @@
     </p>
     </div>
     <div class="joinbtn">
-    <a href="sign-up.html"><button type="button" class="btn btn-info btn-lg">JOIN</button></a>
+    <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
+    JOIN
+    </button>
     </div>
 </section>
-<!---------------------------------------------------------------------------------Footer + Socials-->
+<!--Footer + Socials-->
 <footer>
     <ul class="social-networks">
         <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
@@ -159,6 +161,6 @@
         <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
 </ul>
 </footer>
-<!---------------------------------------------------------------------------------End-->
+<!--End-->
 </body>
 </html>
