--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="icon" href="assets/images/icon3.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>GYM CITY</title>
 </head>
 <body>
 <!--Navigation Bar + Drop Down Menu-->
