--- a/locations.html
+++ b/locations.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link href="css/hover.css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <link rel="icon" href="assets/images/icon3.png">
+    <title>GYM CITY</title>
 </head>
 <body>
 <!--Navigation Bar + Drop Down Menu-->
