fixed image height

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <section class="offer-you">
     <h1 class="text-center">WHAT WE OFFER YOU</h1>
     <p class="text-center">
-    We offer you access to our modern smart facilities, our gyms provide you with professionally certified PTs, at least 50 different pieces of equipment to be used in each gym,<br>
-    a range of facilities including saunas, swimming pools, private rooms and even a spa. Most importantly we provide you with a safe and secure environment to exercise in, <br>
+    We offer you access to our modern smart facilities, our gyms provide you with professionally certified PTs, at least 50 different pieces of equipment to be used in each gym,
+    a range of facilities including saunas, swimming pools, private rooms and even a spa. Most importantly we provide you with a safe and secure environment to exercise in, 
     together we can achieve your fitness goals.
     </p>
 </section>
@@ -80,17 +80,17 @@
             <p>Meet our managers that will be helping you out in your gyms!</p>
         </div>
         <div class="row">
-            <div class="col-md-4">
-                <div class="card text-center">
+            <div class="col-md-4 ourteam">
+                <div class="card text-center ourteam">
                     <img src="assets/images/ptw.jpg" class="card img-top" alt="Personal trainer">
                     <div class="card-body">
                         <h5 class="card-title">Emily James <i class="fas fa-user"></i></h5>
-                        <p class="card-text"> "Hey there! I run the Manchester GYM CITY, I've been in the business for 10 years now and counting! You can always find me on the gym floor leading classes and helping our members achieve their fitness goals. See you there!'"</p>
+                        <p class="card-text"> "Hey there! I run the Manchester GYM CITY, I've been in the business for 10 years now and counting! You can always find me on the gym floor leading classes and helping our members achieve their fitness goals. See you there!"</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card text-center">
+                <div class="card text-center ourteam">
                     <img src="assets/images/pt.jpg" class="card img-top" alt="Personal trainer">
                     <div class="card-body">
                         <h5 class="card-title">Mark Hughes <i class="fas fa-user"></i></h5>
