Fixed our team cards, added back to top button on each page, properly indented index page

--- a/locations.html
+++ b/locations.html
@@ -21,7 +21,7 @@
   <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span id="menu-button"><i class="fas fa-bars"></i></span>
   </button>
-    <div id="nav-logo">
+    <div id="nav-logo top">
         <a class="links" href="index.html"><h1>GYM CITY</h1></a>
     </div>
     <div id="login">
@@ -153,6 +153,10 @@
     </button>
     </div>
 </section>
+<div class="top-btn">
+<button class="btn-info btn-lg" onclick="window.location.href='#top';">back to top
+    </button>
+    </div>
 <!--Footer + Socials-->
 <footer>
     <ul class="social-networks">
