--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
   <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span id="menu-button"><i class="fas fa-bars"></i></span>
   </button>
-    <div id="nav-logo">
+    <div id="nav-logo top">
         <a class="links" href="index.html"><h1>GYM CITY</h1></a>
     </div>
     <div id="login">
@@ -47,7 +47,7 @@
 <!--Gym Pictures-->
 <section id="gallery">
 <h1 id="review-title">Our Facilities</h1>
-<div class="row no-gutters">
+<div class="gallery-row row no-gutters">
   <div class="column">
     <img alt="Gym picture" src="assets/images/modern1.jpg">
     <img alt="Gym picture" src="assets/images/Student.jpg">
@@ -69,7 +69,12 @@
     <img alt="Gym picture" src="assets/images/gympics4.jpg">
   </div>
 </div>
+
 </section>
+<div class="top-btn">
+<button class="btn-info btn-lg" onclick="window.location.href='#top';">back to top
+    </button>
+    </div>
 
 <!--Footer + Socials-->
 <footer>
