--- a/sign-up.html
+++ b/sign-up.html
@@ -20,7 +20,7 @@
   <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span id="menu-button"><i class="fas fa-bars"></i></span>
   </button>
-    <div id="nav-logo">
+    <div id="nav-logo top">
         <a class="links" href="index.html"><h1>GYM CITY</h1></a>
     </div>
     <div id="login">
@@ -77,7 +77,7 @@
                             <option>Student</option>
                             </select>
                         </div>
-                        <input type="submit" value="Submit">
+                        <button class="btn-info btn-lg" type="submit">Join Us</button>
                 </form>
             </div>
         </div>
@@ -126,6 +126,12 @@
 <section id="enquiries">
     <h1>Any other enquiries please contact us at: <a href = "mailto:gymcity@outlook.com">gymcity@outlook.com</a></h1>
 </section>
+
+<div class="top-btn">
+<button class="btn-info btn-lg" onclick="window.location.href='#top';">back to top
+    </button>
+    </div>
+
 <!--Footer + Socials-->
 <footer>
 <ul class="social-networks">
