--- a/locations.html
+++ b/locations.html
@@ -1,171 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    <link href="css/hover.css" rel="stylesheet" media="all">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" href="assets/images/icon3.png">
-    <title>GYM CITY</title>
-</head>
-<body>
-<!--Navigation Bar + Drop Down Menu-->
-<header>
-<nav class="navbar navbar-expand-xxl navbar-light nav-color">  
-  <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span id="menu-button"><i class="fas fa-bars"></i></span>
-  </button>
-    <div id="nav-logo top">
-        <a class="links" href="index.html"><h1>GYM CITY</h1></a>
-    </div>
-    <div id="login">
-        <a class="links" href="sign-up.html"><h3><i class="fas fa-user-plus"></i> Join Us</h3></a>
-    </div>
-  <div class="links-hover collapse navbar-collapse" id="navbarTogglerDemo01">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="links" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="links" href="locations.html">Locations<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="links" href="gallery.html">Gallery</a>
-      </li>
-      <li class="nav-item">
-        <a class="links" href="sign-up.html">Sign Up</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-</header>
-<!--Locations-->
-<section id="loc-section">
-    <div class="row no-gutters">
-        <div class="col-md-4">
-            <div class="newcastle"></div>
-            <div class="loc-cover">
-            <a href="#newcastle-scroll"><h1>NEWCASTLE</h1></a>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+      <link href="css/hover.css" rel="stylesheet" media="all">
+      <link rel="stylesheet" href="assets/css/style.css">
+      <link rel="icon" href="assets/images/icon3.png">
+      <title>GYM CITY</title>
+   </head>
+   <body>
+      <!--Navigation Bar + Drop Down Menu-->
+      <header>
+         <nav class="navbar navbar-expand-xxl navbar-light nav-color">
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span id="menu-button"><i class="fas fa-bars"></i></span>
+            </button>
+            <div id="nav-logo top">
+               <a class="links" href="index.html">
+                  <h1>GYM CITY</h1>
+               </a>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="london"></div>
-            <div class="loc-cover">
-            <a href="#london-scroll"><h1>LONDON</h1></a>
+            <div id="login">
+               <a class="links" href="sign-up.html">
+                  <h3><i class="fas fa-user-plus"></i> Join Us</h3>
+               </a>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="manchester"></div>
-            <div class="loc-cover">
-            <a href="#manchester-scroll"><h1>MANCHESTER</h1></a>
+            <div class="links-hover collapse navbar-collapse" id="navbarTogglerDemo01">
+               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                  <li class="nav-item active">
+                     <a class="links" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="links" href="locations.html">Locations<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="links" href="gallery.html">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="links" href="sign-up.html">Sign Up</a>
+                  </li>
+               </ul>
             </div>
-        </div>
-    </div>
-</section>
-<!--Location Maps-->
-<section id="maps">
-<div class="container">
-<div class="row">
-    <div class="col-md text-pad">
-    <div id="london-scroll">
-        <h1>GYM CITY </h1><h2>LONDON</h2>
-        </div> 
-        <h3>Here in our London GYM CITY we provide the following facilities and services!</h3>
-        <ul>
-            <li>10'000 Square Meter Facility</li>
-            <li>Brand new 3g football pitch</li>
-            <li>Olymic size swimming pool</li>
-            <li>Spa</li>
-            <li>State of the art gym floor and equipment</li>
-            <li>Smart machines to analyze your perfomance</li>
-            <li>Various classes</li>
-            <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
-        </ul>
-    </div>
-    <div class="col-md map-pad">
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div></div>
-    </div>
-    <img src="assets/images/londongym.jpg" class="gympics" alt="">
-
-        <div class="col-md text-pad "> 
-        <div id="newcastle-scroll">
-        <h1>GYM CITY </h1><h2>NEWCASTLE</h2>
-        </div>
-        <h3>Here in our Newcastle GYM CITY we provide the following facilities and services!</h3>
-        <ul>
-            <li>7000 Square Meter Facility</li>
-            <li>Olymic size swimming pool</li>
-            <li>Outdoor 11 a-side football pitch</li>
-            <li>Spa</li>
-            <li>State of the art gym floor and equipment</li>
-            <li>Smart machines to analyze your perfomance</li>
-            <li>Various classes</li>
-            <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
-        </ul>
-    </div>
-        
-    <div class="col-md map-pad">
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div></div>
-</div>
-<img src="assets/images/newcastlegym.jpg" class="gympics" alt="">
-    <div class="col-md text-pad"> 
-        <div id="manchester-scroll">
-            <h1>GYM CITY </h1><h2>MANCHESTER</h2>
+         </nav>
+      </header>
+      <!--Locations-->
+      <section id="loc-section">
+         <div class="conatiner row no-gutters">
+            <div class="col-md-4">
+               <div class="newcastle"></div>
+               <div class="loc-cover">
+                  <a href="#newcastle-scroll">
+                     <h1>NEWCASTLE</h1>
+                  </a>
+               </div>
             </div>
-            <h3>Here in our Manchester GYM CITY we provide the following facilities and services!</h3>
-        <ul>
-            <li>7000 Square Meter Facility</li>
-            <li>Olymic size swimming pool</li>
-            <li>Spa</li>
-            <li>State of the art gym floor and equipment</li>
-            <li>Smart machines to analyze your perfomance</li>
-            <li>Weightlifting and Body Building performing stage</li>
-            <li>Various classes</li>
-            <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
-        </ul>
-        </div>
-        <div class="col-md map-pad">
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div></div>
-        </div>
-        <img src="assets/images/manchestergym.jpg" class="gympics" alt="">
-    </div>
-    </div>
-</section>
-<!--Mobile-->
-
-<!--Description-->
-<section>
-<div class="ourgyms">
-    <h1>Our Gyms</h1>
-    <p>
-    All of our Gyms have been designed from the ground up to give you the best experience possible from different work out zones, whether you want to workout alone and not be disturbed in a private room or hit the weights with your mates, clanging the metal as loud as you want. We provide you with the best facilities compared to our competitiors at an amazing price point, by joining our gym, we can help change your life together, build you a workout plan, meal plan and the motivation you need to achieve your goals.
-    </p>
-    </div>
-    <div class="joinbtn">
-    <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
-    JOIN
-    </button>
-    </div>
-</section>
-<div class="top-btn">
-<button class="btn-info btn-lg" onclick="window.location.href='#top';">back to top
-    </button>
-    </div>
-<!--Footer + Socials-->
-<footer>
-    <ul class="social-networks">
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-        <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-        <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
-</ul>
-</footer>
-<!--End-->
-</body>
+            <div class="col-md-4">
+               <div class="london"></div>
+               <div class="loc-cover">
+                  <a href="#london-scroll">
+                     <h1>LONDON</h1>
+                  </a>
+               </div>
+            </div>
+            <div class="col-md-4">
+               <div class="manchester"></div>
+               <div class="loc-cover">
+                  <a href="#manchester-scroll">
+                     <h1>MANCHESTER</h1>
+                  </a>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!--Location Maps-->
+      <section id="maps">
+         <div class="container">
+            <div class="row">
+               <div class="container">
+                  <h1 class="location-title">LONDON</h1>
+               </div>
+               <div class="col-md text-pad">
+                  <div id="london-scroll">
+                     <h2>GYM CITY </h2>
+                  </div>
+                  <h3>Here in our London GYM CITY we provide the following facilities and services!</h3>
+                  <ul>
+                     <li>10'000 Square Meter Facility</li>
+                     <li>Brand new 3g football pitch</li>
+                     <li>Olymic size swimming pool</li>
+                     <li>Spa</li>
+                     <li>State of the art gym floor and equipment</li>
+                     <li>Smart machines to analyze your perfomance</li>
+                     <li>Various classes</li>
+                     <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
+                  </ul>
+               </div>
+               <div class="col-md map-pad">
+                  <div class="mapouter">
+                     <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
+                  </div>
+               </div>
+               <img src="assets/images/londongym.jpg" class="gympics" alt="">
+               <div class="container">
+                  <h1 class="location-title">Newcastle</h1>
+               </div>
+               <div class="col-md text-pad ">
+                  <div id="newcastle-scroll">
+                     <h2>GYM CITY </h2>
+                  </div>
+                  <h3>Here in our Newcastle GYM CITY we provide the following facilities and services!</h3>
+                  <ul>
+                     <li>7000 Square Meter Facility</li>
+                     <li>Olymic size swimming pool</li>
+                     <li>Outdoor 11 a-side football pitch</li>
+                     <li>Spa</li>
+                     <li>State of the art gym floor and equipment</li>
+                     <li>Smart machines to analyze your perfomance</li>
+                     <li>Various classes</li>
+                     <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
+                  </ul>
+               </div>
+               <div class="col-md map-pad">
+                  <div class="mapouter">
+                     <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
+                  </div>
+               </div>
+               <img src="assets/images/newcastlegym.jpg" class="gympics" alt="">
+               <div class="container">
+                  <h1 class="location-title">Manchester</h1>
+               </div>
+               <div class="col-md text-pad">
+                  <div id="manchester-scroll">
+                     <h2>GYM CITY </h2>
+                  </div>
+                  <h3>Here in our Manchester GYM CITY we provide the following facilities and services!</h3>
+                  <ul>
+                     <li>7000 Square Meter Facility</li>
+                     <li>Olymic size swimming pool</li>
+                     <li>Spa</li>
+                     <li>State of the art gym floor and equipment</li>
+                     <li>Smart machines to analyze your perfomance</li>
+                     <li>Weightlifting and Body Building performing stage</li>
+                     <li>Various classes</li>
+                     <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
+                  </ul>
+               </div>
+               <div class="col-md map-pad">
+                  <div class="mapouter">
+                     <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
+                  </div>
+               </div>
+               <img src="assets/images/manchestergym.jpg" class="gympics" alt="">
+            </div>
+         </div>
+      </section>
+      <!--Mobile-->
+      <!--Description-->
+      <section>
+         <div class=" container ourgyms">
+            <h1>Our Gyms</h1>
+            <p>
+               All of our Gyms have been designed from the ground up to give you the best experience possible from different work out zones, whether you want to workout alone and not be disturbed in a private room or hit the weights with your mates, clanging the metal as loud as you want. We provide you with the best facilities compared to our competitiors at an amazing price point, by joining our gym, we can help change your life together, build you a workout plan, meal plan and the motivation you need to achieve your goals.
+            </p>
+         </div>
+         <div class="joinbtn">
+            <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
+            JOIN
+            </button>
+         </div>
+      </section>
+      <div class="top-btn">
+         <button class="btn-info btn-lg" onclick="window.location.href='#top';">back to top
+         </button>
+      </div>
+      <!--Footer + Socials-->
+      <footer>
+         <ul class="social-networks">
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
+         </ul>
+      </footer>
+      <!--End-->
+   </body>
 </html>
