Sign up prices added and centered gym logo

--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span id="menu-button"><i class="fas fa-bars"></i></span>
             </button>
-            <div id="nav-logo top">
                <a class="links" href="index.html">
-                  <h1>GYM CITY</h1>
+                  <h1 id="nav-logo">GYM CITY</h1>
                </a>
-            </div>
             <div id="login">
                <a class="links" href="sign-up.html">
                   <h3><i class="fas fa-user-plus"></i> Join Us</h3>
@@ -85,7 +83,7 @@
                         <h1>Mark <br> Hughes</h1>
                         <p class="title">Manager GYM CITY <br> London</p>
                         <p>Hey! I'm Mark manager of Gym City London</p>
-                        <p><button>Contact</button></p>
+                        <p><button onclick="window.location.href='sign-up.html';">Contact</button></p>
                      </div>
                   </div>
                   <div class="col-md-4 padding-0 d-flex align-items-stretch">
@@ -94,7 +92,7 @@
                         <h1>Emily <br> James</h1>
                         <p class="title">Manager GYM CITY <br> Newcastle</p>
                         <p>Hey! I'm Emily manager of Gym City London</p>
-                        <p><button>Contact</button></p>
+                        <p><button onclick="window.location.href='sign-up.html';">Contact</button></p>
                      </div>
                   </div>
                   <div class="col-md-4 padding-0 d-flex align-items-stretch">
@@ -103,7 +101,7 @@
                         <h1>Carlos <br> Vargas</h1>
                         <p class="title">Manager GYM CITY <br> Manchester</p>
                         <p>Hey! I'm Carlos manager of Gym City London</p>
-                        <p><button>Contact</button></p>
+                        <p><button onclick="window.location.href='sign-up.html';">Contact</button></p>
                      </div>
                   </div>
                </div>
