--- a/gallery.html
+++ b/gallery.html
@@ -16,34 +16,36 @@
 <body>
 <!--Navigation Bar + Drop Down Menu-->
 <header>
-<nav class="navbar navbar-expand-xxl navbar-light nav-color">  
-  <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span id="menu-button"><i class="fas fa-bars"></i></span>
-  </button>
-    <div id="nav-logo top">
-        <a class="links" href="index.html"><h1>GYM CITY</h1></a>
-    </div>
-    <div id="login">
-        <a class="links" href="sign-up.html"><h3><i class="fas fa-user-plus"></i> Join Us</h3></a>
-    </div>
-  <div class="links-hover collapse navbar-collapse" id="navbarTogglerDemo01">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="links" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="links" href="locations.html">Locations</a>
-      </li>
-      <li class="nav-item">
-        <a class="links" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="links" href="sign-up.html">Sign Up</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-</header>
+         <nav class="navbar navbar-expand-xxl navbar-light nav-color">
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span id="menu-button"><i class="fas fa-bars"></i></span>
+            </button>
+               <a class="links" href="index.html">
+                  <h1 id="nav-logo">GYM CITY</h1>
+               </a>
+            <div id="login">
+               <a class="links" href="sign-up.html">
+                  <h3><i class="fas fa-user-plus"></i> Join Us</h3>
+               </a>
+            </div>
+            <div class="links-hover collapse navbar-collapse" id="navbarTogglerDemo01">
+               <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
+                  <li class="nav-item">
+                     <a class="links" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="links" href="locations.html">Locations</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="links" href="gallery.html">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="links" href="sign-up.html">Sign Up</a>
+                  </li>
+               </ul>
+            </div>
+         </nav>
+      </header>
 <!--Gym Pictures-->
 <section id="gallery">
 <h1 id="review-title">Our Facilities</h1>
@@ -55,7 +57,7 @@
   </div>
   <div class="column">
     <img alt="Gym picture" src="assets/images/Premium.jpg">
-    <img alt="Gym picture" src="assets/images/newcastlegym.jpg">
+    <img alt="Gym picture" src="assets/images/Premium.jpg">
     <img alt="Gym picture" src="assets/images/modern2.jpg">
   </div>
   <div class="column">
