--- a/sign-up.html
+++ b/sign-up.html
@@ -127,7 +127,7 @@
         </section>
 <!--Other-->
 <section id="enquiries">
-    <h1>Any other enquiries please contact us at: <a href = "mailto:gymcity@outlook.com">gymcity@outlook.com</a></h1>
+    <h1>Any other enquiries please contact us at: <a href = "mailto:gymcity@outlook.com" target="_blank">gymcity@outlook.com</a></h1>
 </section>
 
 
