changed image file names

--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
       <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-      <link rel="icon" href="assets/images/icon3.png">
+      <link rel="icon" href="assets/images/icon.jpg">
       <link rel="stylesheet" href="assets/css/style.css">
       <title>GYM CITY</title>
    </head>
@@ -51,24 +51,24 @@
          <h1 id="review-title">Our Facilities</h1>
          <div class="gallery-row row no-gutters">
             <div class="column">
-               <img alt="Gym picture" src="assets/images/modern1.jpg">
-               <img alt="Gym picture" src="assets/images/Student.jpg">
-               <img alt="Gym picture" src="assets/images/Standard.jpg">
+               <img alt="Gym picture" src="assets/images/gallery1.jpg">
+               <img alt="Gym picture" src="assets/images/gallery2.jpg">
+               <img alt="Gym picture" src="assets/images/gallery3.jpg">
             </div>
             <div class="column">
-               <img alt="Gym picture" src="assets/images/Premium.jpg">
-               <img alt="Gym picture" src="assets/images/Premium.jpg">
-               <img alt="Gym picture" src="assets/images/modern2.jpg">
+               <img alt="Gym picture" src="assets/images/gallery4.jpg">
+               <img alt="Gym picture" src="assets/images/gallery5.jpg">
+               <img alt="Gym picture" src="assets/images/gallery6.jpg">
             </div>
             <div class="column">
                <img alt="Gym picture" src="assets/images/manchestergym.jpg">
                <img alt="Gym picture" src="assets/images/londongym.jpg">
-               <img alt="Gym picture" src="assets/images/gympics1.jpg">
+               <img alt="Gym picture" src="assets/images/newcastlegym.jpg">
             </div>
             <div class="column">
-               <img alt="Gym picture" src="assets/images/gympics2.jpg">
-               <img alt="Gym picture" src="assets/images/gympics3.jpg">
-               <img alt="Gym picture" src="assets/images/gympics4.jpg">
+               <img alt="Gym picture" src="assets/images/gallery7.jpg">
+               <img alt="Gym picture" src="assets/images/gallery8.jpg">
+               <img alt="Gym picture" src="assets/images/gallery9.jpg">
             </div>
          </div>
       </section>
