--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
       <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <link rel="icon" href="assets/images/icon3.png">
+      <link rel="icon" href="assets/images/icon.jpg">
       <link rel="stylesheet" href="assets/css/style.css">
       <title>GYM CITY</title>
    </head>
@@ -79,7 +79,7 @@
                <div class="row ">
                   <div class="col-md-4 padding-0 d-flex align-items-stretch">
                      <div class="team-card card">
-                        <img src="assets/images/pt.jpg" alt="John" style="width:100%">
+                        <img src="assets/images/mark-pt.jpg" alt="Mark" style="width:100%">
                         <h1>Mark <br> Hughes</h1>
                         <p class="title">Manager GYM CITY <br> London</p>
                         <p>Hey! I'm Mark manager of Gym City London</p>
@@ -88,7 +88,7 @@
                   </div>
                   <div class="col-md-4 padding-0 d-flex align-items-stretch">
                      <div class="team-card card">
-                        <img src="assets/images/12.jpg" alt="John" style="width:100%">
+                        <img src="assets/images/emily-pt.jpg" alt="Emily" style="width:100%">
                         <h1>Emily <br> James</h1>
                         <p class="title">Manager GYM CITY <br> Newcastle</p>
                         <p>Hey! I'm Emily manager of Gym City London</p>
@@ -97,7 +97,7 @@
                   </div>
                   <div class="col-md-4 padding-0 d-flex align-items-stretch">
                      <div class="team-card card">
-                        <img src="assets/images/pt2.jpg" alt="John" style="width:100%">
+                        <img src="assets/images/carlos-pt.jpg" alt="Carlos" style="width:100%">
                         <h1>Carlos <br> Vargas</h1>
                         <p class="title">Manager GYM CITY <br> Manchester</p>
                         <p>Hey! I'm Carlos manager of Gym City London</p>
