--- a/sign-up.html
+++ b/sign-up.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    <link rel="icon" href="assets/images/icon3.png">
+    <link rel="icon" href="assets/images/icon.jpg">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>GYM CITY</title>
 </head>
