--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section id="hero-section">
          <div class="row">
             <div class="col-md-12">
-               <div class="hero"></div>
+               <div id="hero"></div>
                <div id="cover">
                   <h2>Welcome To</h2>
                   <h1>GYM CITY</h1>
