App section added to home page

--- a/index.html
+++ b/index.html
@@ -72,13 +72,34 @@
             </p>
          </div>
       </section>
+      <!--Youtube Video-->
       <section>
       <div class="container">
         <iframe width="100%" height="500px"
-src="https://www.youtube.com/embed/-Tb4Q-xoP9k?autoplay=1">
-</iframe>
+            src="https://www.youtube.com/embed/-Tb4Q-xoP9k?autoplay=1">
+        </iframe>
       </div>
       </section>
+      <!--App-->
+        <section>
+            <div class="container">
+            <div class="row app">
+                <div class="col-md-6">
+                    <img src="assets/images/app.jpg" alt="app" style="width:100%">
+                </div>
+                <div class="col-md-6">
+                    <h1>Our App</h1>
+                    <ul>
+                        <li>Join our gym and get free access to our app!</li>
+                        <li>This allows you to plan your workouts, view meal plans and book pt appointments</li>
+
+                    </ul>
+                </div>
+            </div>
+            
+            </div>
+        </section>
+
       <!--Our Team-->
       <section class="our-team">
          <div class="container">
