Fixed image size on locations page

--- a/locations.html
+++ b/locations.html
@@ -104,7 +104,7 @@
                      <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
                   </div>
                </div>
-               <img src="assets/images/londongym.jpg" class="gympics" alt="">
+               <img src="assets/images/londongym.jpg" class="gympics" alt="London Gym" style="height:100%">
                <div class="container">
                   <h1 class="location-title">Newcastle</h1>
                </div>
@@ -129,8 +129,8 @@
                      <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
                   </div>
                </div>
-               <img src="assets/images/newcastlegym.jpg" class="gympics" alt="">
-               <div class="container">
+               <img src="assets/images/newcastlegym.jpg" class="gympics" alt="Newcastle Gym">
+               <div class="container" style="height:100%">
                   <h1 class="location-title">Manchester</h1>
                </div>
                <div class="col-md text-pad">
@@ -154,7 +154,7 @@
                      <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
                   </div>
                </div>
-               <img src="assets/images/manchestergym.jpg" class="gympics" alt="">
+               <img src="assets/images/manchestergym.jpg" class="gympics" alt="Manchester Gym" style="height:100%">
             </div>
          </div>
       </section>
