--- a/gallery.html
+++ b/gallery.html
@@ -20,9 +20,11 @@
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span id="menu-button"><i class="fas fa-bars"></i></span>
             </button>
-            <a class="links" href="index.html">
-               <h1 id="nav-logo">GYM CITY</h1>
-            </a>
+            <div id="logo">
+               <a class="links" href="index.html">
+                  <h1 id="nav-logo">GYM CITY</h1>
+               </a>
+               </div>
             <div id="login">
                <a class="links" href="sign-up.html">
                   <h3><i class="fas fa-user-plus"></i> Join Us</h3>
