--- a/locations.html
+++ b/locations.html
@@ -21,21 +21,23 @@
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span id="menu-button"><i class="fas fa-bars"></i></span>
             </button>
+            <div id="logo">
                <a class="links" href="index.html">
                   <h1 id="nav-logo">GYM CITY</h1>
                </a>
+               </div>
             <div id="login">
                <a class="links" href="sign-up.html">
                   <h3><i class="fas fa-user-plus"></i> Join Us</h3>
                </a>
             </div>
             <div class="links-hover collapse navbar-collapse" id="navbarTogglerDemo01">
-               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                  <li class="nav-item active">
-                     <a class="links" href="index.html">Home</a>
+               <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
+                  <li class="nav-item">
+                     <a class="links" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                     <a class="links" href="locations.html">Locations<span class="sr-only">(current)</span></a>
+                     <a class="links" href="locations.html">Locations</a>
                   </li>
                   <li class="nav-item">
                      <a class="links" href="gallery.html">Gallery</a>
