--- a/sign-up.html
+++ b/sign-up.html
@@ -20,10 +20,11 @@
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span id="menu-button"><i class="fas fa-bars"></i></span>
             </button>
+            <div id="logo">
                <a class="links" href="index.html">
                   <h1 id="nav-logo">GYM CITY</h1>
                </a>
-
+               </div>
             <div id="login">
                <a class="links" href="sign-up.html">
                   <h3><i class="fas fa-user-plus"></i> Join Us</h3>
@@ -119,7 +120,7 @@
                             <option>Student</option>
                             </select>
                         </div>
-                        <input type="submit" value="Submit">
+                        <button class="btn-info btn-lg" type="submit">Join Us</button>
                 </form>
                 </div>
                 </div>
