removed unecessary code

--- a/sign-up.html
+++ b/sign-up.html
@@ -50,6 +50,7 @@
       </header>
 <!--Form-->
 <section id="signup-form">
+<div class="conatiner">
     <div class="row">
         <div class="col-md-12">
                 <div class="sign-up-pic"></div>
@@ -85,47 +86,11 @@
                 </form>
             </div>
         </div>
+        </div>
     </div>
 </section>
 
-<section id="mobile-signup">
-<div class="row">
-<div class="col-md-12">
-<div class="sign-up-pic"></div>
-                <div class="signup-cover">
-                <h1>Sign Up</h1>
-                <form>
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">First Name</label>
-                            <input type="text" class="form-control" id="fname-m" placeholder="First Name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Second Name</label>
-                            <input type="text" class="form-control" id="sname-m" placeholder="Second Name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Password</label>
-                            <input type="password" class="form-control" id="pword-m" placeholder="Password" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Email address</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1-m" placeholder="name@example.com" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">Example select</label>
-                            <select class="form-control" id="exampleFormControlSelect1-m" >
-                            <option>Select Membership</option>
-                            <option>Premium</option>
-                            <option>Standard</option>
-                            <option>Student</option>
-                            </select>
-                        </div>
-                        <button class="btn-info btn-lg" type="submit">Join Us</button>
-                </form>
-                </div>
-                </div>
-            </div>
-        </section>
+
 <!--Other-->
 <section id="enquiries">
     <h1>Any other enquiries please contact us at: <a href = "mailto:gymcity@outlook.com" target="_blank">gymcity@outlook.com</a></h1>
