--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
          </div>
       </section>
       <!--Youtube Video-->
-      <section>
+      
       <div class="container">
-        <iframe width="100%" height="500px"
+        <iframe class="youtube"
             src="https://www.youtube.com/embed/-Tb4Q-xoP9k?autoplay=1">
         </iframe>
       </div>
-      </section>
+      
       <!--App-->
         <section>
             <div class="container">
