--- a/locations.html
+++ b/locations.html
@@ -93,7 +93,7 @@
                   <ul>
                      <li>10'000 Square Meter Facility</li>
                      <li>Brand new 3g football pitch</li>
-                     <li>Olymic size swimming pool</li>
+                     <li>Olympic size swimming pool</li>
                      <li>Spa</li>
                      <li>State of the art gym floor and equipment</li>
                      <li>Smart machines to analyze your perfomance</li>
@@ -117,11 +117,11 @@
                   <h3>Here in our Newcastle GYM CITY we provide the following facilities and services!</h3>
                   <ul>
                      <li>7000 Square Meter Facility</li>
-                     <li>Olymic size swimming pool</li>
+                     <li>Olympic size swimming pool</li>
                      <li>Outdoor 11 a-side football pitch</li>
                      <li>Spa</li>
                      <li>State of the art gym floor and equipment</li>
-                     <li>Smart machines to analyze your perfomance</li>
+                     <li>Smart machines to analyze your performance</li>
                      <li>Various classes</li>
                      <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
                   </ul>
@@ -142,11 +142,11 @@
                   <h3>Here in our Manchester GYM CITY we provide the following facilities and services!</h3>
                   <ul>
                      <li>7000 Square Meter Facility</li>
-                     <li>Olymic size swimming pool</li>
+                     <li>Olympic size swimming pool</li>
                      <li>Spa</li>
                      <li>State of the art gym floor and equipment</li>
-                     <li>Smart machines to analyze your perfomance</li>
-                     <li>Weightlifting and Body Building performing stage</li>
+                     <li>Smart machines to analyze your performance</li>
+                     <li>Weightlifting and BodyBuilding performing stage</li>
                      <li>Various classes</li>
                      <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
                   </ul>
