--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <img src="assets/images/emily-pt.jpg" alt="Emily" style="width:100%">
                         <h1>Emily <br> James</h1>
                         <p class="title">Manager GYM CITY <br> Newcastle</p>
-                        <p>Hey! I'm Emily manager of Gym City London</p>
+                        <p>Hey! I'm Emily manager of Gym City Newcastle</p>
                         <p><button onclick="window.location.href='sign-up.html';">Contact</button></p>
                      </div>
                   </div>
@@ -125,7 +125,7 @@
                         <img src="assets/images/carlos-pt.jpg" alt="Carlos" style="width:100%">
                         <h1>Carlos <br> Vargas</h1>
                         <p class="title">Manager GYM CITY <br> Manchester</p>
-                        <p>Hey! I'm Carlos manager of Gym City London</p>
+                        <p>Hey! I'm Carlos manager of Gym City Manchester</p>
                         <p><button onclick="window.location.href='sign-up.html';">Contact</button></p>
                      </div>
                   </div>
