Chanaged font size to rem

--- a/locations.html
+++ b/locations.html
@@ -12,7 +12,7 @@
       <link href="css/hover.css" rel="stylesheet" media="all">
       <link rel="stylesheet" href="assets/css/style.css">
       <link rel="icon" href="assets/images/icon.jpg">
-      <title>GYM CITY</title>
+      <title>GYM CITY | Locations</title>
    </head>
    <body>
       <!--Navigation Bar + Drop Down Menu-->
