--- a/sign-up.html
+++ b/sign-up.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
       <link rel="icon" href="assets/images/icon.jpg">
       <link rel="stylesheet" href="assets/css/style.css">
-      <title>GYM CITY</title>
+      <title>GYM CITY | Sign Up</title>
    </head>
    <body>
       <!--Navigation Bar + Drop Down Menu-->
