--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <link rel="icon" href="assets/images/icon.jpg">
       <link rel="stylesheet" href="assets/css/style.css">
-      <title>GYM CITY</title>
+      <title>GYM CITY | Home</title>
    </head>
    <body>
       <!--Navigation Bar + Drop Down Menu-->
@@ -77,7 +77,7 @@
       <!--Youtube Video-->
       <div class="container">
          <iframe class="youtube"
-            src="https://www.youtube.com/embed/-Tb4Q-xoP9k?autoplay=1">
+            src="https://www.youtube.com/embed/-Tb4Q-xoP9k?">
          </iframe>
       </div>
       <!--App-->
